--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
   http: ^0.13.3
   cupertino_icons: ^1.0.2
   localstorage: ^4.0.0+1
+  intl: ^0.17.0
+  flutter_map: ^0.14.0
+  geocoding: ^2.0.1
+  shared_preferences: ^2.0.6
+  latlong2: ^0.8.0
 
 dev_dependencies:
   flutter_test:
