--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   localstorage: ^4.0.0+1
   intl: ^0.17.0
   flutter_map: ^0.14.0
+  geolocator: ^7.6.0
   geocoding: ^2.0.1
   shared_preferences: ^2.0.6
   latlong2: ^0.8.0
